[package]
name = "actions-toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96" }
thiserror = { version = "1.0.40" }
uuid = { version = "1.3.3", features = ["v4"] }
