[package]
name = "actions-toolkit"
version = "0.1.0"
edition = "2021"

[dependencies]
thread_local = { version = "1.1.7" }
once_cell = { version = "1.18.0" }
serde_json = { version = "1.0.96" }
serde = { version = "1.0.163", features = ["derive"] }
thiserror = { version = "1.0.40" }
uuid = { version = "1.3.3", features = ["v4"] }
