[package]
name = "actions-toolkit"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.22", features = ["json", "blocking", "stream", "multipart"] }
serde = { version = "1.0.163", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.3.3", features = ["v4"] }
serde_json = { version = "1.0.96" }
thiserror = { version = "1.0.43" }
log = { version = "0.4.19" }
backoff = "0.4.0"
secrecy = "0.8.0"
anyhow = "1.0.75"
base64 = "0.21.5"
bytes = "1.5.0"
http = "0.2.11"
zip = "0.6.6"
